--- a/game/src/index.css
+++ b/game/src/index.css
@@ -1,69 +1,56 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  background-color: #1a1a1a;
+  color: antiquewhite;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.modal {
+  background-color: #1a1a1a99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  inset: 0;
 }
+
+.modal-content {
+  padding: 15px;
+  border-radius: 15px;
+  background-color: #111111;
+  width: 100%;
+  max-width: 300px;
+  height: fit-content;
+}
+
+.modal-content p {
+  text-align: center;
+}
+
+.modal-content .buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.modal-content .buttons button {
+  outline: none;
+  border-radius: 5px;
+  padding: 5px;
+  width: 47%;
+  font-weight: bold;
+  color: #fff;
+}
+
+.modal-content .yesButton {
+  background-color: #00aa00;
+  border: 1px solid #00ff00;  
+}
+.modal-content .noButton {
+  background-color: #aa0000;
+  border: 1px solid #FF0000;
+}
+
