--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ button {
   cursor: pointer;
 }
 
+.game-stats p {
+  user-select: none;
+  cursor: pointer;
+}
+
 .modal {
   background-color: #1a1a1a99;
   display: flex;
