--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ button {
 .game-stats p {
   user-select: none;
   cursor: pointer;
-  height: 30%;
+  height: 25%;
 }
 
 .game-stats {
@@ -35,7 +35,7 @@ button {
 
 .inventory {
   width: 300px;
-  height: fit-content;
+  height: fit-content
 }
 
 .modal {
